Simplify directory structure by renaming directories and moving saved data directories under `save_data`

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
 slurm/logs/*
-llm_generations
-llm_evaluations
-metrics
-metrics_comparisons
-wildguard_experiments
+save_data
 
-*.pyc*
 *.pyc
 
 .envrc
-Meta-*
-Llama-*
